--- a/languages/etsy_importer.pot
+++ b/languages/etsy_importer.pot
@@ -2,7 +2,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Etsy Importer\n"
-"POT-Creation-Date: 2015-09-24 01:42-0500\n"
+"POT-Creation-Date: 2015-09-24 01:44-0500\n"
 "PO-Revision-Date: 2015-09-24 01:27-0500\n"
 "Last-Translator: Michael Beckwith <michael.d.beckwith@gmail.com>\n"
 "Language-Team: Michael Beckwith <michael.d.beckwith@gmail.com>\n"
@@ -20,442 +20,7 @@ msgstr ""
 "_nx_noop:3c,1,2;__ngettext_noop:1,2\n"
 "X-Poedit-SearchPath-0: .\n"
 "X-Poedit-SearchPathExcluded-0: *.js\n"
-
-#: CMB2/example-functions.php:67
-msgid "Test Metabox"
-msgstr ""
-
-#: CMB2/example-functions.php:77 CMB2/example-functions.php:363
-msgid "Test Text"
-msgstr ""
-
-#: CMB2/example-functions.php:78 CMB2/example-functions.php:90
-#: CMB2/example-functions.php:98 CMB2/example-functions.php:106
-#: CMB2/example-functions.php:115 CMB2/example-functions.php:123
-#: CMB2/example-functions.php:137 CMB2/example-functions.php:144
-#: CMB2/example-functions.php:152 CMB2/example-functions.php:169
-#: CMB2/example-functions.php:178 CMB2/example-functions.php:186
-#: CMB2/example-functions.php:193 CMB2/example-functions.php:200
-#: CMB2/example-functions.php:214 CMB2/example-functions.php:227
-#: CMB2/example-functions.php:240 CMB2/example-functions.php:252
-#: CMB2/example-functions.php:261 CMB2/example-functions.php:269
-#: CMB2/example-functions.php:278 CMB2/example-functions.php:285
-#: CMB2/example-functions.php:298 CMB2/example-functions.php:364
-#: CMB2/example-functions.php:458 CMB2/example-functions.php:466
-#: CMB2/example-functions.php:473 CMB2/example-functions.php:480
-#: CMB2/example-functions.php:487 CMB2/example-functions.php:494
-#: CMB2/example-functions.php:501 CMB2/example-functions.php:539
-msgid "field description (optional)"
-msgstr ""
-
-#: CMB2/example-functions.php:89
-msgid "Test Text Small"
-msgstr ""
-
-#: CMB2/example-functions.php:97
-msgid "Test Text Medium"
-msgstr ""
-
-#: CMB2/example-functions.php:105
-msgid "Website URL"
-msgstr ""
-
-#: CMB2/example-functions.php:114
-msgid "Test Text Email"
-msgstr ""
-
-#: CMB2/example-functions.php:122
-msgid "Test Time"
-msgstr ""
-
-#: CMB2/example-functions.php:129 CMB2/example-functions.php:130
-msgid "Time zone"
-msgstr ""
-
-#: CMB2/example-functions.php:136
-msgid "Test Date Picker"
-msgstr ""
-
-#: CMB2/example-functions.php:143
-msgid "Test Date Picker (UNIX timestamp)"
-msgstr ""
-
-#: CMB2/example-functions.php:151
-msgid "Test Date/Time Picker Combo (UNIX timestamp)"
-msgstr ""
-
-#: CMB2/example-functions.php:168
-msgid "Test Money"
-msgstr ""
-
-#: CMB2/example-functions.php:177
-msgid "Test Color Picker"
-msgstr ""
-
-#: CMB2/example-functions.php:185
-msgid "Test Text Area"
-msgstr ""
-
-#: CMB2/example-functions.php:192
-msgid "Test Text Area Small"
-msgstr ""
-
-#: CMB2/example-functions.php:199
-msgid "Test Text Area for Code"
-msgstr ""
-
-#: CMB2/example-functions.php:206
-msgid "Test Title Weeeee"
-msgstr ""
-
-#: CMB2/example-functions.php:207
-msgid "This is a title description"
-msgstr ""
-
-#: CMB2/example-functions.php:213
-msgid "Test Select"
-msgstr ""
-
-#: CMB2/example-functions.php:219 CMB2/example-functions.php:232
-#: CMB2/example-functions.php:244
-msgid "Option One"
-msgstr ""
-
-#: CMB2/example-functions.php:220 CMB2/example-functions.php:233
-#: CMB2/example-functions.php:245
-msgid "Option Two"
-msgstr ""
-
-#: CMB2/example-functions.php:221 CMB2/example-functions.php:234
-#: CMB2/example-functions.php:246
-msgid "Option Three"
-msgstr ""
-
-#: CMB2/example-functions.php:226
-msgid "Test Radio inline"
-msgstr ""
-
-#: CMB2/example-functions.php:239
-msgid "Test Radio"
-msgstr ""
-
-#: CMB2/example-functions.php:251
-msgid "Test Taxonomy Radio"
-msgstr ""
-
-#: CMB2/example-functions.php:260
-msgid "Test Taxonomy Select"
-msgstr ""
-
-#: CMB2/example-functions.php:268
-msgid "Test Taxonomy Multi Checkbox"
-msgstr ""
-
-#: CMB2/example-functions.php:277
-msgid "Test Checkbox"
-msgstr ""
-
-#: CMB2/example-functions.php:284
-msgid "Test Multi Checkbox"
-msgstr ""
-
-#: CMB2/example-functions.php:289
-msgid "Check One"
-msgstr ""
-
-#: CMB2/example-functions.php:290
-msgid "Check Two"
-msgstr ""
-
-#: CMB2/example-functions.php:291
-msgid "Check Three"
-msgstr ""
-
-#: CMB2/example-functions.php:297
-msgid "Test wysiwyg"
-msgstr ""
-
-#: CMB2/example-functions.php:305
-msgid "Test Image"
-msgstr ""
-
-#: CMB2/example-functions.php:306
-msgid "Upload an image or enter a URL."
-msgstr ""
-
-#: CMB2/example-functions.php:312
-msgid "Multiple Files"
-msgstr ""
-
-#: CMB2/example-functions.php:313
-msgid "Upload or add multiple images/attachments."
-msgstr ""
-
-#: CMB2/example-functions.php:320
-msgid "oEmbed"
-msgstr ""
-
-#: CMB2/example-functions.php:321
-msgid ""
-"Enter a youtube, twitter, or instagram URL. Supports services listed at <a "
-"href=\"http://codex.wordpress.org/Embeds\">http://codex.wordpress.org/"
-"Embeds</a>."
-msgstr ""
-
-#: CMB2/example-functions.php:354
-msgid "About Page Metabox"
-msgstr ""
-
-#: CMB2/example-functions.php:385
-msgid "Repeating Field Group"
-msgstr ""
-
-#: CMB2/example-functions.php:393
-msgid "Generates reusable form entries"
-msgstr ""
-
-#: CMB2/example-functions.php:395
-msgid "Entry {#}"
-msgstr ""
-
-#: CMB2/example-functions.php:396
-msgid "Add Another Entry"
-msgstr ""
-
-#: CMB2/example-functions.php:397
-msgid "Remove Entry"
-msgstr ""
-
-#: CMB2/example-functions.php:409
-msgid "Entry Title"
-msgstr ""
-
-#: CMB2/example-functions.php:416
-msgid "Description"
-msgstr ""
-
-#: CMB2/example-functions.php:417
-msgid "Write a short description for this entry"
-msgstr ""
-
-#: CMB2/example-functions.php:423
-msgid "Entry Image"
-msgstr ""
-
-#: CMB2/example-functions.php:429
-msgid "Image Caption"
-msgstr ""
-
-#: CMB2/example-functions.php:450
-msgid "User Profile Metabox"
-msgstr ""
-
-#: CMB2/example-functions.php:457
-msgid "Extra Info"
-msgstr ""
-
-#: CMB2/example-functions.php:465
-msgid "Avatar"
-msgstr ""
-
-#: CMB2/example-functions.php:472
-msgid "Facebook URL"
-msgstr ""
-
-#: CMB2/example-functions.php:479
-msgid "Twitter URL"
-msgstr ""
-
-#: CMB2/example-functions.php:486
-msgid "Google+ URL"
-msgstr ""
-
-#: CMB2/example-functions.php:493
-msgid "Linkedin URL"
-msgstr ""
-
-#: CMB2/example-functions.php:500
-msgid "User Field"
-msgstr ""
-
-#: CMB2/example-functions.php:523
-msgid "Theme Options Metabox"
-msgstr ""
-
-#: CMB2/example-functions.php:538
-msgid "Site Background Color"
-msgstr ""
-
-#: CMB2/includes/CMB2.php:112
-msgid "Metabox configuration is required to have an ID parameter"
-msgstr ""
-
-#: CMB2/includes/CMB2.php:302
-msgid "Click to toggle"
-msgstr ""
-
-#: CMB2/includes/CMB2_Ajax.php:37
-msgid "Please Try Again"
-msgstr ""
-
-#: CMB2/includes/CMB2_Ajax.php:133 CMB2/tests/test-cmb-types.php:766
-msgid "Remove Embed"
-msgstr ""
-
-#: CMB2/includes/CMB2_Ajax.php:137 CMB2/tests/test-cmb-types.php:767
-#, php-format
-msgid "No oEmbed Results Found for %s. View more info at"
-msgstr ""
-
-#: CMB2/includes/CMB2_Field.php:885
-msgid "Add Group"
-msgstr ""
-
-#: CMB2/includes/CMB2_Field.php:886
-msgid "Remove Group"
-msgstr ""
-
-#: CMB2/includes/CMB2_Field.php:908 CMB2/includes/CMB2_Field.php:912
-#: CMB2/tests/test-cmb-field.php:170
-msgid "None"
-msgstr ""
-
-#: CMB2/includes/CMB2_Types.php:294
-msgid "Add Row"
-msgstr ""
-
-#: CMB2/includes/CMB2_Types.php:353 CMB2/includes/CMB2_Types.php:986
-#: CMB2/includes/CMB2_hookup.php:183 CMB2/tests/test-cmb-types.php:147
-#: CMB2/tests/test-cmb-types.php:155 CMB2/tests/test-cmb-types.php:715
-#: CMB2/tests/test-cmb-types.php:740
-msgid "Remove"
-msgstr ""
-
-#: CMB2/includes/CMB2_Types.php:722 CMB2/includes/CMB2_Types.php:770
-msgid "No terms"
-msgstr ""
-
-#: CMB2/includes/CMB2_Types.php:835 CMB2/tests/test-cmb-types.php:691
-#: CMB2/tests/test-cmb-types.php:717
-msgid "Add or Upload Files"
-msgstr ""
-
-#: CMB2/includes/CMB2_Types.php:893 CMB2/tests/test-cmb-types.php:727
-#: CMB2/tests/test-cmb-types.php:742
-msgid "Add or Upload File"
-msgstr ""
-
-#: CMB2/includes/CMB2_Types.php:967 CMB2/includes/CMB2_hookup.php:182
-msgid "Remove Image"
-msgstr ""
-
-#: CMB2/includes/CMB2_Types.php:981 CMB2/includes/CMB2_hookup.php:184
-#: CMB2/tests/test-cmb-types.php:716 CMB2/tests/test-cmb-types.php:741
-msgid "File:"
-msgstr ""
-
-#: CMB2/includes/CMB2_Types.php:984 CMB2/includes/CMB2_hookup.php:185
-#: CMB2/tests/test-cmb-types.php:714 CMB2/tests/test-cmb-types.php:739
-msgid "Download"
-msgstr ""
-
-#: CMB2/includes/CMB2_hookup.php:128 CMB2/includes/CMB2_hookup.php:165
-msgid "Clear"
-msgstr ""
-
-#: CMB2/includes/CMB2_hookup.php:129
-msgid "Default"
-msgstr ""
-
-#: CMB2/includes/CMB2_hookup.php:130
-msgid "Select Color"
-msgstr ""
-
-#: CMB2/includes/CMB2_hookup.php:131
-msgid "Current Color"
-msgstr ""
-
-#: CMB2/includes/CMB2_hookup.php:155
-msgid "mm/dd/yy"
-msgstr ""
-
-#: CMB2/includes/CMB2_hookup.php:156
-msgid "Sunday, Monday, Tuesday, Wednesday, Thursday, Friday, Saturday"
-msgstr ""
-
-#: CMB2/includes/CMB2_hookup.php:157
-msgid "Su, Mo, Tu, We, Th, Fr, Sa"
-msgstr ""
-
-#: CMB2/includes/CMB2_hookup.php:158
-msgid "Sun, Mon, Tue, Wed, Thu, Fri, Sat"
-msgstr ""
-
-#: CMB2/includes/CMB2_hookup.php:159
-msgid ""
-"January, February, March, April, May, June, July, August, September, "
-"October, November, December"
-msgstr ""
-
-#: CMB2/includes/CMB2_hookup.php:160
-msgid "Jan, Feb, Mar, Apr, May, Jun, Jul, Aug, Sep, Oct, Nov, Dec"
-msgstr ""
-
-#: CMB2/includes/CMB2_hookup.php:161
-msgid "Next"
-msgstr ""
-
-#: CMB2/includes/CMB2_hookup.php:162
-msgid "Prev"
-msgstr ""
-
-#: CMB2/includes/CMB2_hookup.php:163
-msgid "Today"
-msgstr ""
-
-#: CMB2/includes/CMB2_hookup.php:164 CMB2/includes/CMB2_hookup.php:174
-msgid "Done"
-msgstr ""
-
-#: CMB2/includes/CMB2_hookup.php:168
-msgid "Choose Time"
-msgstr ""
-
-#: CMB2/includes/CMB2_hookup.php:169
-msgid "Time"
-msgstr ""
-
-#: CMB2/includes/CMB2_hookup.php:170
-msgid "Hour"
-msgstr ""
-
-#: CMB2/includes/CMB2_hookup.php:171
-msgid "Minute"
-msgstr ""
-
-#: CMB2/includes/CMB2_hookup.php:172
-msgid "Second"
-msgstr ""
-
-#: CMB2/includes/CMB2_hookup.php:173
-msgid "Now"
-msgstr ""
-
-#: CMB2/includes/CMB2_hookup.php:175
-msgid "hh:mm TT"
-msgstr ""
-
-#: CMB2/includes/CMB2_hookup.php:181
-msgid "Use this file"
-msgstr ""
-
-#: CMB2/includes/CMB2_hookup.php:186
-msgid "Select / Deselect All"
-msgstr ""
-
-#: CMB2/includes/helper-functions.php:254
-msgid "Save"
-msgstr ""
+"X-Poedit-SearchPathExcluded-1: CMB2\n"
 
 #: etsy-importer.php:206
 msgid "Product"
